--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.7",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
