--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "global": "^4.4.0",
     "next": "10.0.5",
     "next-images": "^1.7.0",
     "react": "17.0.1",
