--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^9.1.1",
     "global": "^4.4.0",
     "next": "10.0.5",
     "next-images": "^1.7.0",
