--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.1.1",
+    "firebase-admin": "^9.12.0",
     "global": "^4.4.0",
     "next": "10.0.5",
     "next-images": "^1.7.0",
@@ -29,6 +30,7 @@
     "@types/react": "^17.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.7",
+    "@vercel/node": "^1.12.1",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
