--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
 NEXT_PUBLIC_FIREBASE_APP_ID=""
+NEXT_PUBLIC_PORTFOLIO_ID=""
+NEXT_PUBLIC_CONTENT_ID=""
 GOOGLE_CONFIG=""
