--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-markdown": "6.0.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
