--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "firebase": "^9.1.1",
     "firebase-admin": "^9.12.0",
     "global": "^4.4.0",
+    "googleapis": "^89.0.0",
     "next": "10.0.5",
     "next-images": "^1.7.0",
+    "nodemailer": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -26,8 +29,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.7",
