--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "firebase": "^9.1.1",
     "firebase-admin": "^9.12.0",
     "global": "^4.4.0",
