--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "10.0.5",
     "next-images": "^1.7.0",
     "nodemailer": "^6.7.0",
+    "pdf-lib": "^1.17.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
