--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
 NEXT_PUBLIC_FIREBASE_APP_ID=""
 NEXT_PUBLIC_PORTFOLIO_ID=""
 NEXT_PUBLIC_CONTENT_ID=""
+NEXT_PUBLIC_HABITS_ID=""
 GOOGLE_CONFIG=""
